[gd_scene load_steps=14 format=2]

[ext_resource path="res://Bird.tscn" type="PackedScene" id=1]
[ext_resource path="res://flappy-bird-assets-master/sprites/background-day.png" type="Texture" id=2]
[ext_resource path="res://flappy-bird-assets-master/sprites/base.png" type="Texture" id=3]
[ext_resource path="res://Base_layer.gd" type="Script" id=4]
[ext_resource path="res://Background_layer.gd" type="Script" id=5]
[ext_resource path="res://Pipe.tscn" type="PackedScene" id=6]
[ext_resource path="res://World.gd" type="Script" id=7]
[ext_resource path="res://Control.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 180, 37 )

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 360, 110, 0, 0, 0, 0, 360, 330 )
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 0, 180 )

[sub_resource type="InputEventAction" id=6]
action = "ui_play"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[node name="World" type="Node2D"]
script = ExtResource( 7 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}
pipe = ExtResource( 6 )

[node name="Base" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base"]
position = Vector2( 180, 460 )
shape = SubResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Background_layer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 432, 0 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Background_layer"]
position = Vector2( 142, 204 )
scale = Vector2( 1.5, 1 )
texture = ExtResource( 2 )

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
layer = 0

[node name="Base_layer" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_mirroring = Vector2( 504, 0 )
script = ExtResource( 4 )
speed_base = 150.0

[node name="Sprite" type="Sprite" parent="ParallaxBackground2/Base_layer"]
position = Vector2( 166, 480 )
scale = Vector2( 1.5, 1 )
texture = ExtResource( 3 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 360, 110 )
rotation = 1.5708

[node name="Bird" parent="." instance=ExtResource( 1 )]
position = Vector2( 140, 210 )

[node name="Time_spawn" type="Timer" parent="."]
wait_time = 1.3

[node name="Start_point" type="Position2D" parent="."]
position = Vector2( 140, 210 )
__meta__ = {
"_gizmo_extents_": 37.8
}

[node name="Line_cross" type="Area2D" parent="."]
position = Vector2( 84, 212 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Line_cross"]
shape = SubResource( 5 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" parent="HUD" instance=ExtResource( 8 )]

[node name="ColorRect" parent="HUD/Control" index="0"]
color = Color( 0.772549, 0.796078, 0.486275, 1 )

[node name="ReferenceRect" parent="HUD/Control" index="1"]
border_color = Color( 0.392157, 0.203922, 0.00392157, 1 )
border_width = 3.0
editor_only = false

[node name="Start_button" parent="HUD/Control/VBoxContainer" index="1"]
shortcut = SubResource( 7 )

[connection signal="hit" from="Bird" to="." method="game_over"]
[connection signal="timeout" from="Time_spawn" to="." method="_on_Time_spawn_timeout"]
[connection signal="body_entered" from="Line_cross" to="." method="hit_score"]
[connection signal="pressed" from="HUD/Control/VBoxContainer/Start_button" to="." method="game_start"]

[editable path="HUD/Control"]
